css styling, voting system added

--- a/LaunchPadLabChallenge/public/index.html
+++ b/LaunchPadLabChallenge/public/index.html
@@ -5,61 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>LaunchPad Lab Challenge</title>
     <script src="./bundle.js" defer=""></script>
-  <style type="text/css">*
-
-  {
-  font-family: "Comic Sans MS", cursive, sans-serif;
-  }
-
-  body {
-    background-color: rgb(232, 210, 235);
-    height: 100vh;
-    padding: 0;
-    margin: 0;
-    width: 100vw;
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
-
-  #heading {
-    text-align: center;
-    margin-top: 40px;
-  }
-
-  h1 {
-    font-size: 45px;
-  }
-
-  h2 {
-    font-size: 30px;
-  }
-
-  h3 {
-    font-size: 27px;
-  }
-
-  nav {
-    background-color: #333333;
-    color: #c0c0c0;
-    height: 45px;
-    padding: 10px;
-    font-size: 27px;
-    text-align: center;
-  }
-
-  nav a {
-    color: white;
-    margin: 10px 15px 10px 15px;
-  }
-
-  nav a:visited {
-    color: white;
-  }
-
-  nav a:hover {
-    color: rgb(200, 80, 204);
-  }
-  </style>
+    <link rel="stylesheet" href="/style.css" />
 </head>
   <body>
     <div id="app"></div>
